--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./nachos.jpg');
+    background-image: url('./images/nachos.jpg');
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
     color: white;
