--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
     color: orange;
 }
 
+.inactive {
+    display: none;
+}
+
 nav {
     text-align: center;
     margin-top: 20px;
@@ -56,7 +60,7 @@ img:hover {
     opacity: 0.5;
 }
 
-#card {
+#contact-card {
     text-align: center;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
     padding: 15px;
@@ -74,4 +78,17 @@ img:hover {
 .credits-content {
     display: flex;
     align-self: center;
+}
+
+#card-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 18rem);
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.card {
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
+    padding: 2em;
 }
