--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ main {
     font-size: 2em;
 }
 
-#contact-container {
+.contact-container {
     display: flex;
     justify-content: center;
 }
@@ -80,7 +80,7 @@ img:hover {
     align-self: center;
 }
 
-#card-grid {
+.card-grid {
     display: grid;
     grid-template-columns: repeat(2, 18rem);
     grid-template-rows: auto;
