--- a/src/style.css
+++ b/src/style.css
@@ -126,3 +126,20 @@ button:hover {
     width: 100%;
     height: 70%;
 }
+
+@media (max-width: 600px) {
+    #credits {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .card-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 18rem);
+        grid-template-rows: auto;
+        justify-content: center;
+        gap: 3rem;
+        margin-bottom: 25px;
+    }
+}
